# defitest

./: CMakeLists.txt  README.md
include/: Bot.h
src/: Bot.cpp  main.cpp
test/: BotTest.cpp  CMakeLists.txt
